[gd_scene load_steps=55 format=3 uid="uid://phal3hem5178"]

[ext_resource type="Texture2D" uid="uid://ckmpx3x083vlm" path="res://Assets/Background/morning_bg.png" id="1_48xkp"]
[ext_resource type="Script" path="res://Scene/Menu/character_select.gd" id="1_84ctf"]
[ext_resource type="Texture2D" uid="uid://jqp8i7gf6s3b" path="res://Assets/Game_Elements/ui_button.png" id="3_1vy4b"]
[ext_resource type="Texture2D" uid="uid://capk6xawtudb7" path="res://Assets/Characters/CharBSITSprites/BSIT Char Idle Animation Sprites.png" id="3_pn4qh"]
[ext_resource type="FontFile" uid="uid://nsdsdvtwvjbv" path="res://Assets/Game_Elements/SummerPixel22Regular-jE0W7.ttf" id="4_lltsl"]
[ext_resource type="Texture2D" uid="uid://cgbi24ansh7ja" path="res://Assets/Characters/CharBSHMSprites/BSHM Idle.png" id="6_4kiog"]
[ext_resource type="Texture2D" uid="uid://dm6iy4gnu60cq" path="res://Assets/Characters/CharBSNSprites/BSN Idle.png" id="8_k8xeo"]
[ext_resource type="Texture2D" uid="uid://bm0h2myonw28" path="res://Assets/Characters/CharBSTMSprites/BSTM Idle.png" id="9_raksw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ois2e"]
atlas = ExtResource("3_pn4qh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8jqe"]
atlas = ExtResource("3_pn4qh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5se8"]
atlas = ExtResource("3_pn4qh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0s2d"]
atlas = ExtResource("3_pn4qh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56f2w"]
atlas = ExtResource("3_pn4qh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o6in"]
atlas = ExtResource("3_pn4qh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxf3n"]
atlas = ExtResource("3_pn4qh")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_om7q2"]
atlas = ExtResource("3_pn4qh")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpc8m"]
atlas = ExtResource("3_pn4qh")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_unjyw"]
atlas = ExtResource("3_pn4qh")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24tdv"]
atlas = ExtResource("3_pn4qh")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ia68j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ois2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8jqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5se8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0s2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56f2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o6in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxf3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om7q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpc8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unjyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24tdv")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c3ghm"]
atlas = ExtResource("6_4kiog")
region = Rect2(0, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6e7c"]
atlas = ExtResource("6_4kiog")
region = Rect2(32, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlafa"]
atlas = ExtResource("6_4kiog")
region = Rect2(64, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyiis"]
atlas = ExtResource("6_4kiog")
region = Rect2(96, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_k58fs"]
atlas = ExtResource("6_4kiog")
region = Rect2(128, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8xic"]
atlas = ExtResource("6_4kiog")
region = Rect2(160, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_20xl2"]
atlas = ExtResource("6_4kiog")
region = Rect2(192, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qursr"]
atlas = ExtResource("6_4kiog")
region = Rect2(224, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jjy0"]
atlas = ExtResource("6_4kiog")
region = Rect2(256, 0, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvunl"]
atlas = ExtResource("6_4kiog")
region = Rect2(288, 0, 32, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_p3wii"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3ghm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6e7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlafa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyiis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k58fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8xic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20xl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qursr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jjy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvunl")
}],
"loop": true,
"name": &"default",
"speed": 19.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bkgci"]
atlas = ExtResource("8_k8xeo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65rnt"]
atlas = ExtResource("8_k8xeo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr2tn"]
atlas = ExtResource("8_k8xeo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwki0"]
atlas = ExtResource("8_k8xeo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0omhh"]
atlas = ExtResource("8_k8xeo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tej0o"]
atlas = ExtResource("8_k8xeo")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrths"]
atlas = ExtResource("8_k8xeo")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg5yi"]
atlas = ExtResource("8_k8xeo")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2nli"]
atlas = ExtResource("8_k8xeo")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0onqm"]
atlas = ExtResource("8_k8xeo")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6n0dw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkgci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65rnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr2tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwki0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0omhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tej0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrths")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg5yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2nli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0onqm")
}],
"loop": true,
"name": &"default",
"speed": 19.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3fjvd"]
atlas = ExtResource("9_raksw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwskh"]
atlas = ExtResource("9_raksw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5sw1"]
atlas = ExtResource("9_raksw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qop7"]
atlas = ExtResource("9_raksw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt7ce"]
atlas = ExtResource("9_raksw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r55tu"]
atlas = ExtResource("9_raksw")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2g6i"]
atlas = ExtResource("9_raksw")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx5mw"]
atlas = ExtResource("9_raksw")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2unf"]
atlas = ExtResource("9_raksw")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvb2"]
atlas = ExtResource("9_raksw")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r3np"]
atlas = ExtResource("9_raksw")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i24ca"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fjvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwskh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5sw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qop7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt7ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r55tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2g6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx5mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2unf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r3np")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="CharacterSelect" type="Node"]
script = ExtResource("1_84ctf")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_48xkp")
expand_mode = 2

[node name="BSIT" type="Node" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BSIT"]
texture_filter = 1
position = Vector2(161.938, 275.938)
scale = Vector2(7.31641, 7.31641)
sprite_frames = SubResource("SpriteFrames_ia68j")
autoplay = "default"
frame_progress = 0.296637

[node name="itbutton" type="TextureRect" parent="BSIT"]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -510.0
offset_top = -229.0
offset_right = -311.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
texture = ExtResource("3_1vy4b")
metadata/_edit_use_anchors_ = true

[node name="level1_button" type="Button" parent="BSIT/itbutton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -16.0
offset_right = 75.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.720892, 1, 0.598648, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_lltsl")
theme_override_font_sizes/font_size = 50
text = "BSIT
"
flat = true
metadata/_edit_use_anchors_ = true

[node name="BSHM" type="Node" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BSHM"]
texture_filter = 1
position = Vector2(435, 276)
scale = Vector2(7.86667, 7.86667)
sprite_frames = SubResource("SpriteFrames_p3wii")
autoplay = "default"
frame_progress = 0.962373

[node name="hmbutton" type="TextureRect" parent="BSHM"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.5
offset_top = 105.0
offset_right = -37.5
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_1vy4b")

[node name="level1bshm_button" type="Button" parent="BSHM/hmbutton"]
layout_mode = 0
offset_left = 29.5
offset_top = 26.0
offset_right = 175.5
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_lltsl")
theme_override_font_sizes/font_size = 50
text = "BSHM"
flat = true

[node name="BSN" type="Node" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BSN"]
texture_filter = 1
position = Vector2(989, 263)
scale = Vector2(8.17742, 8.17742)
sprite_frames = SubResource("SpriteFrames_6n0dw")
autoplay = "default"
frame_progress = 0.0250725

[node name="bsnbutton" type="TextureRect" parent="BSN"]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 294.0
offset_top = -226.0
offset_right = 493.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
texture = ExtResource("3_1vy4b")

[node name="level1bsn_button" type="Button" parent="BSN/bsnbutton"]
layout_mode = 0
offset_left = 65.0
offset_top = 27.0
offset_right = 150.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_lltsl")
theme_override_font_sizes/font_size = 50
text = "BSN"
flat = true

[node name="back" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -568.0
offset_top = -623.0
offset_right = -417.0
offset_bottom = -537.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
texture = ExtResource("3_1vy4b")

[node name="back_button" type="Button" parent="back"]
layout_mode = 0
offset_left = 25.0
offset_top = 13.0
offset_right = 164.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_lltsl")
theme_override_font_sizes/font_size = 70
text = "< "
flat = true

[node name="TEXTS" type="Node" parent="."]

[node name="Label" type="Label" parent="TEXTS"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -332.5
offset_top = 48.0
offset_right = 332.5
offset_bottom = 129.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.945988, 1, 0.940626, 1)
theme_override_colors/font_outline_color = Color(0.664622, 0.877681, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_lltsl")
theme_override_font_sizes/font_size = 80
text = "Choose a character"

[node name="Label2" type="Label" parent="TEXTS"]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -563.5
offset_top = -100.0
offset_right = 563.5
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.78916, 0.961483, 1, 1)
theme_override_colors/font_outline_color = Color(0.129412, 0.121569, 0.188235, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_lltsl")
theme_override_font_sizes/font_size = 40
text = "These college students have different challenges to 
face each semester. Whose adventure are you ready to witness?"
horizontal_alignment = 1

[node name="BSTM" type="Node" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BSTM"]
texture_filter = 1
position = Vector2(697.25, 261.25)
scale = Vector2(8.29688, 8.29688)
sprite_frames = SubResource("SpriteFrames_i24ca")
autoplay = "default"
frame_progress = 0.961203

[node name="TextureRect" type="TextureRect" parent="BSTM"]
texture_filter = 1
anchors_preset = -1
anchor_left = -0.0737847
anchor_right = 0.0434028
anchor_bottom = 0.0709877
offset_left = 694.0
offset_top = 441.0
offset_right = 758.0
offset_bottom = 481.0
texture = ExtResource("3_1vy4b")
metadata/_edit_use_anchors_ = true

[node name="level1bstm_button" type="Button" parent="BSTM/TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 46.0
offset_top = 26.0
offset_right = 160.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_lltsl")
theme_override_font_sizes/font_size = 50
text = "BSTM"
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BSIT/itbutton/level1_button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="BSHM/hmbutton/level1bshm_button" to="." method="_on_level_1_bshm_button_pressed"]
[connection signal="pressed" from="BSN/bsnbutton/level1bsn_button" to="." method="_on_level_1_bsn_button_pressed"]
[connection signal="pressed" from="back/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="BSTM/TextureRect/level1bstm_button" to="." method="_on_level_1_bstm_button_pressed"]
